--- a/bookmark-manager-angular/src/index.html
+++ b/bookmark-manager-angular/src/index.html
@@ -1,16 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
-    <title>BookmarkManagerAngular</title>
+    <title>URL Bookmark Manager</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
     <app-root></app-root>
+    <script src="main.ts"></script>
 </body>
 
 </html>
